Changes for APR 1.3.0
  *) Fix error checking in kqueue, epoll and event port versions of
     apr_pollset_create.  PR 40660, 40661, 40662
     [Larry Cipriani <lvc lucent.com>]

  *) Add some documentation on the format matched by apr_fnmatch.
     [David Glasser <glasser mit.edu>]

  *) Add apr_hash_clear.  [Daniel L. Rall <dlr apache.org>]

  *) Don't try to build apr_app.c on MinGW.
     [Matthias Miller <Blog outofhanwell.com>]

  *) Fix the timeout converstion in apr_pollset with the KQueue
     backend. [Marco Molteni <mmolteni cisco.com>]

  *) Implement apr_threadkey_private destructors on WIN32
     instead silently ignoring them, so that they behave like on
     the pthreads powered platforms. [Mladen Turk]

  *) Support MinGW.  [John Vandenberg, Justin Erenkrantz]

  *) Implement apr_thread_yield on Unix in terms of pthread_yield or
     sched_yield. [Keisuke Nishida <keisuke.nishida gmail.com>]

  *) Provide folding in autogenerated .manifest files for Win32 builders
     using VisualStudio 2005  [William Rowe]

  *) Utilise Solaris' native atomic_* functions for apr_atomics
     where appropriate. [Colm MacCarthaigh]

  *) Make apr_socket_recvfrom initialize the port field in the from
     sockaddr.  PR 39325 [Anthony Minessale <anthmct yahoo.com>]

  *) NetBSD: Avoid leaving zombie process when using apr_signal() 
     to ignore SIGCHLD.  PR 36750.  [Todd Vierling <tv pobox.com>]

  *) Implement support for apr_proc_mutex_trylock() on Unix platforms.
     PR 38785.  [Chris Darroch <chrisd pearsoncmg.com>]

  *) APR_FIND_APR macro now supports customisable detailed checks on
     each installed apr. [Justin Erenkrantz, Colm MacCarthaigh]

  *) APR_FIND_APR macro no longer checks /usr/local/apache2/
     [Colm MacCarthaigh]

  *) Add APR_POLLSET_NOCOPY option to apr_pollset API to eliminate
     O(n)-time lookup in apr_pollset_remove() (currently implemented
     only for epoll).  [Brian Pane]
